3/14/2002
	- In jnamed, AXFR responses didn't have the message ID or flags
	  set correctly.
	- jnamed failed to respond to messages signed with unknown keys.

1/21/2002
	- Handle empty domain statements in /etc/resolv.conf. (reported
	  by Blake Ramsdell <blake@brutesquadlabs.com>)

1/1/2002
	- Minor performance enhancments (suggested by Christopher Brind)

10/14/2001
	- Add support for the DNSSEC RSA-SHA1 algorithm (David Blacka)
	- Add rdataToWireCanonical() (David Blacka)

9/27/2001
	- jnamed can now listen on specific addresses, with the "address"
	  keyword in the config file.

9/23/2001
	- 1.2.3 released

9/14/2001
	- Creating an Enumeration of an empty RRset caused an infinite loop.
	  (David Blacka <davidb@research.netsol.com>)

8/9/2001
	- nsupdate compatibility and a bug fix to the update client.
	  (patch from David Sward <david@berzerked.org>)
8/8/2001
	- The results of ANY queries were not properly cached.

8/4/2001
	- 1.2.2 released

7/22/2001
	- Added the -q (print query) option to dig.
	- Bitstring labels are now canonicalized.
	- jnamed implements the DO (DNSSEC OK) bit.

7/19/2001
	- A string tokenizer bug caused TXT records with one string to be
	  incorrectly parsed.  (David Blacka)
	- Added Name.getLabelString().

7/17/2001
	- Started implementing Name.compareTo().  (loosely based on a
	  patch from David Blacka).

7/16/2001
	- Converting a AAAA record to wire format was broken.
	  (David Blacka)
	- Inet6Address did not properly reject addresses that are too
	  long or too short, and also didn't properly handle addresses
	  with one number after a double colon.
	- Key footprints were computed incorrectly.  Also cache footprints
	  in the KEYRecord to avoid recomputation. (David Blacka)
	- Added the -d flag to dig, which sets the DNSSEC OK bit.

7/13/2001
	- KEY flags were incorrect (David Blacka <davidb@research.netsol.com>)
	- Add routines for parsing a master file from a non-file input
	  source (David Blacka)