@@ -2,6 +2,7 @@
 	- In jnamed, AXFR responses didn't have the message ID or flags
 	  set correctly.
 	- jnamed failed to respond to messages signed with unknown keys.
+	- jnamed did not sign responses to signed AXFR queries.
 
 1/21/2002
 	- Handle empty domain statements in /etc/resolv.conf. (reported
